force-app/main/default/objects/Abstrakt_Role_User_Detail__c/Abstrakt_Role_User_Detail__c.object-meta.xml
<CustomObject>
    <label>Abstrakt Role User Detail</label>
    <nameField>
        <label>Abstrakt Role User Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Abstrakt Role User Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>