force-app/main/default/objects/Abstrakt_Role_User_Detail__c/fields/A_Player_Scorecard__c.field-meta.xml
<CustomField>
    <fullName>A_Player_Scorecard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Provides a link to the user&apos;s A-Player overall score and individual metric score values.</description>
    <label>A-Player Scorecard</label>
    <referenceTo>User_Scorecard__c</referenceTo>
    <relationshipLabel>Abstrakt Role User Details</relationshipLabel>
    <relationshipName>Abstrakt_Role_User_Details</relationshipName>
    <type>Lookup</type>
</CustomField>