force-app/main/default/objects/Abstrakt_Role_User_Detail__c/fields/Abstrakt_Role__c.field-meta.xml
<CustomField>
    <fullName>Abstrakt_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to roles object. Not AMC Roles.</description>
    <label>Abstrakt Role</label>
    <referenceTo>Role__c</referenceTo>
    <relationshipLabel>Abstrakt Role User Details</relationshipLabel>
    <relationshipName>Abstrakt_Role_User_Details</relationshipName>
    <type>Lookup</type>
</CustomField>