force-app/main/default/objects/Abstrakt_Role_User_Detail__c/fields/ESC__c.field-meta.xml
<CustomField>
    <fullName>ESC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ESC</label>
    <referenceTo>ESC__c</referenceTo>
    <relationshipLabel>Abstrakt Role User Details</relationshipLabel>
    <relationshipName>Abstrakt_Role_User_Details</relationshipName>
    <type>Lookup</type>
</CustomField>