force-app/main/default/objects/Abstrakt_Role_User_Detail__c/fields/Positions_for_Advancement__c.field-meta.xml
<CustomField>
    <fullName>Positions_for_Advancement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Positions for Advancement</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an Active Role</errorMessage>
        <filterItems>
            <field>Role__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Role__c</referenceTo>
    <relationshipLabel>Abstrakt Role User Details (Positions for Advancement)</relationshipLabel>
    <relationshipName>Abstrakt_Role_User_Details2</relationshipName>
    <type>Lookup</type>
</CustomField>