force-app/main/default/objects/Abstrakt_Role_User_Detail__c/fields/Roles_for_Entry__c.field-meta.xml
<CustomField>
    <fullName>Roles_for_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Roles for Entry</label>
    <referenceTo>Role__c</referenceTo>
    <relationshipLabel>Abstrakt Role User Details (Roles for Entry)</relationshipLabel>
    <relationshipName>Abstrakt_Role_User_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>