force-app/main/default/objects/Abstrakt_Role_User_Detail__c/recordTypes/Abstrakt_Role_User_Detail.recordType-meta.xml
<RecordType>
    <fullName>Abstrakt_Role_User_Detail</fullName>
    <active>true</active>
    <label>Abstrakt Role User Detail</label>
</RecordType>