force-app/main/default/objects/Abstrakt_Role_User_Detail__c/recordTypes/Positions_for_Advancement.recordType-meta.xml
<RecordType>
    <fullName>Positions_for_Advancement</fullName>
    <active>true</active>
    <label>Positions for Advancement</label>
</RecordType>