force-app/main/default/objects/Abstrakt_Role_User_Detail__c/recordTypes/Roles_for_Entry.recordType-meta.xml
<RecordType>
    <fullName>Roles_for_Entry</fullName>
    <active>true</active>
    <label>Roles for Entry</label>
</RecordType>