force-app/main/default/objects/Abstrakt_Role_User_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Abstrakt_Role__c</columns>
    <columns>ESC__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Abstrakt_Role_User_Detail__c.Abstrakt_Role_User_Detail</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Role User Details Connection</label>
</ListView>