force-app/main/default/objects/Abstrakt_Role_User_Detail__c/listViews/Positions_for_Entry.listView-meta.xml
<ListView>
    <fullName>Positions_for_Entry</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Abstrakt_Role__c</columns>
    <columns>ESC__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Abstrakt_Role_User_Detail__c.Roles_for_Entry</value>
    </filters>
    <label>Positions for Entry</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>